--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site settings
-title: Eric Rexstad, Senior Research Fellow
+title: Eric Rexstad, Research Fellow
 email: eric.rexstad@st-andrews.ac.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Built in Jekyll, maintained on Github
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://erex.github.io" # the base hostname & protocol for your site
 twitter_username: ericrexstad
